代码重构#16 减轻Node层业务