@@ -1,8 +1,7 @@
-package com.ethereal.meta.net.p2p.recevier;
+package com.ethereal.meta.node.p2p.recevier;
 import com.ethereal.meta.core.entity.RequestMeta;
 import com.ethereal.meta.core.entity.ResponseMeta;
 import com.ethereal.meta.meta.Meta;
-import com.ethereal.meta.net.p2p.sender.RemoteInfo;
 import com.ethereal.meta.service.core.ServiceContext;
 import com.ethereal.meta.util.SerializeUtil;
 import com.ethereal.meta.util.UrlUtil;
@@ -13,8 +12,7 @@ import io.netty.channel.SimpleChannelInboundHandler;
 import io.netty.handler.codec.http.*;
 
 import java.lang.reflect.Type;
-import java.net.InetSocketAddress;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -48,31 +46,18 @@ public class ServiceHandler extends SimpleChannelInboundHandler<FullHttpRequest>
 
     @Override
     protected void channelRead0(ChannelHandlerContext ctx, FullHttpRequest req) throws Exception {
-        URL url = new URL(req.uri());
+        URI uri = new URI(req.uri());
         //处理请求头,生成请求元数据
         RequestMeta requestMeta = new RequestMeta();
-        requestMeta.setMapping(url.getPath());
-        requestMeta.setParams(UrlUtil.getQuery(url.getQuery()));
+        requestMeta.setMapping(uri.getPath());
+        requestMeta.setParams(UrlUtil.getQuery(uri.getQuery()));
         requestMeta.setProtocol(req.headers().get("protocol"));
         requestMeta.setMeta(req.headers().get("meta"));
         requestMeta.setHost(req.headers().get("host"));
         requestMeta.setPort(req.headers().get("port"));
-        Meta meta = root;
-        LinkedList<String> mappings = new LinkedList<>(Arrays.asList(requestMeta.getMapping().split("/")));
-        mappings.removeLast();
-        for(String name : mappings){
-            if (meta.getMetas().containsKey(name)){
-                meta = meta.getMetas().get(name);
-            }
-            else {
-                ctx.writeAndFlush(new DefaultFullHttpResponse(HttpVersion.HTTP_1_1,HttpResponseStatus.NOT_FOUND,Unpooled.copiedBuffer(String.format("Meta:%s 未找到", requestMeta.getMapping()),StandardCharsets.UTF_8)));
-                return;
-            }
-        }
         ServiceContext context = new ServiceContext();
+        context.setMappings(new LinkedList<>(Arrays.asList(requestMeta.getMapping().split("/"))));
         context.setRequestMeta(requestMeta);
-        context.setRemoteInfo(new RemoteInfo(new InetSocketAddress(requestMeta.getHost(),Integer.parseInt(requestMeta.getPort()))));
-        context.setInstance(meta.newInstance(context.getRemoteInfo()));
         //Body体中获取参数
         if(req.method() == HttpMethod.GET){
 
@@ -89,9 +74,8 @@ public class ServiceHandler extends SimpleChannelInboundHandler<FullHttpRequest>
         else {
             send(new DefaultFullHttpResponse(HttpVersion.HTTP_1_1,HttpResponseStatus.OK, Unpooled.copiedBuffer((String.format("%s请求不支持", req.method())),StandardCharsets.UTF_8)));
         }
-        Meta finalMeta = meta;
         es.submit(() -> {
-            send(finalMeta.getService().receive(context));
+            send(root.getService().receive(context));
         });
     }
 
@@ -111,7 +95,6 @@ public class ServiceHandler extends SimpleChannelInboundHandler<FullHttpRequest>
             response.headers().set("error", SerializeUtil.gson.toJson(responseMeta.getError()));
             response.headers().set("protocol",responseMeta.getProtocol());
             response.headers().set("meta",responseMeta.getMeta());
-            response.headers().set("value",responseMeta.getMapping());
             send(response);
         }
         else if(data instanceof RequestMeta){
@@ -119,7 +102,6 @@ public class ServiceHandler extends SimpleChannelInboundHandler<FullHttpRequest>
             DefaultFullHttpResponse response = new DefaultFullHttpResponse(HttpVersion.HTTP_1_1,HttpResponseStatus.OK,Unpooled.copiedBuffer(SerializeUtil.gson.toJson(requestMeta.getParams()).getBytes(StandardCharsets.UTF_8)));
             response.headers().set("protocol", requestMeta.getProtocol());
             response.headers().set("meta", requestMeta.getMeta());
-            response.headers().set("value", requestMeta.getMapping());
             send(response);
         }
         else if(data instanceof byte[]){
